end day changes by sumit 2/11/26

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,3 +23,7 @@ body .page-wrapper-new {
 body .mini-sidebar .page-wrapper-new.collapsed {
   margin-left: 65px;
 }
+
+.sidebar-sub-parent-div a{
+  display: flex;
+}
